AUT-28 added swagger documentation for update user's role status
